--- a/course-fp-haskell-glasgow.cabal
+++ b/course-fp-haskell-glasgow.cabal
@@ -28,12 +28,15 @@ source-repository head
 library
   exposed-modules:
       Lib
+      StarmanExtended
+      GuessNumber
   other-modules:
       Paths_course_fp_haskell_glasgow
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , random
   default-language: Haskell2010
 
 executable course-fp-haskell-glasgow-exe
@@ -46,6 +49,8 @@ executable course-fp-haskell-glasgow-exe
   build-depends:
       base >=4.7 && <5
     , course-fp-haskell-glasgow
+    , containers
+
   default-language: Haskell2010
 
 test-suite course-fp-haskell-glasgow-test
